--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
                 <div class="in-bt">
                     <h3>VS-Code Clone</h3>
                     <i class="ri-arrow-right-circle-fill"></i>
-                    <a href="https://github.com/Saurabh0Gupta/vs_code">click to visit</a>
+                    <a href="https://drive.google.com/file/d/1b4DTioGtzn3rLfWQUonSAJjaoTfblAfu/view?usp=drivesdk">click to visit</a>
                 </div>
                 <div class="in-bt">
-                    <h3>To-do List</h3>
+                    <h3>Keep Notes</h3>
                     <i class="ri-arrow-right-circle-fill"></i>
-                    <a href="https://github.com/Saurabh0Gupta/vs_code">click to visit</a>
+                    <a href="https://drive.google.com/file/d/1-4tqH2j6N7jOJz5QlXigr3j9wqbfYrGN/view?usp=drivesdk">click to visit</a>
                 </div>
                 <div class="in-bt">
                     <h3>
