--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                    
         </div>
         <div id="project">
-            <h2>my projects</h2>
+            <h2>My projects</h2>
             <div id="inner-bottom">
                 <div class="in-bt">
                     <h3>VS-Code Clone</h3>
